--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "sinon-chai": "^3.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-security": "^1.12.0",
     "typescript": "^3.1.2"
   },
   "dependencies": {
