Added docker-compose support for production and development

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,13 @@
-.env.development
 .env.example
 .gitignore
 README.md
 tslint.json
+pgdata/
+node_modules/
+.git
+logs
+*.log
+.idea/
+.vscode/
+.vs/
+build/
