--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# This Env file is not to be used, only served as example for
-# .env.development or .env.production
+# This env file is not to be used, only served as example for .env
+# Copy and rename to .env
+# Fill up the vars to be used with the application and docker
+# Since Docker only accepts a .env file, you will use for all environemnts and not commit
 
 CORS_ORIGIN=
-DATABASE_USERNAME=
+DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_HOST=
 DATABASE_PORT=
+DATABASE_DB=
