--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts",
+    "debug": "cross-env NODE_ENV=development nodemon --exec ts-node --inspect --debug-brk src/index.ts",
     "test": "cross-env NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --reporter spec",
     "test:watch": "cross-env NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --reporter spec --watch",
     "build": "rimraf ./dist && tsc -b"
   },
   "devDependencies": {
     "@types/app-root-path": "^1.2.4",
-    "@types/chai": "^4.1.6",
+    "@types/chai": "^4.1.7",
     "@types/compression": "0.0.36",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
@@ -19,21 +20,21 @@
     "@types/helmet": "0.0.42",
     "@types/mocha": "^5.2.5",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^10.12.0",
+    "@types/node": "^10.12.2",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "cross-env": "^5.2.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.6",
     "rimraf": "^2.6.2",
-    "sinon": "^7.0.0",
+    "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.12.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.6"
   },
   "dependencies": {
     "apollo-server-express": "^2.1.0",
@@ -41,17 +42,17 @@
     "argon2": "^0.19.3",
     "compress": "^0.99.0",
     "compression": "^1.7.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "express-rate-limit": "^3.2.1",
+    "express-rate-limit": "^3.3.0",
     "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.2",
+    "graphql-tools": "^4.0.3",
     "helmet": "^3.14.0",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
-    "pg": "^7.5.0",
+    "pg": "^7.6.0",
     "reflect-metadata": "^0.1.12",
     "typeorm": "^0.2.8",
     "winston": "^3.1.0"
