--- a/package.json
+++ b/package.json
@@ -1,60 +1,56 @@
 {
   "name": "nodejs_graphql_typescript_starter",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "debug": "cross-env NODE_ENV=development nodemon --exec ts-node --inspect --debug-brk src/index.ts",
     "test": "cross-env NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --reporter spec",
     "test:watch": "cross-env NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --reporter spec --watch",
-    "build": "rimraf ./dist && tsc -b"
+    "build": "rimraf ./dist && tsc -b",
+    "lint": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
     "@types/app-root-path": "^1.2.4",
     "@types/chai": "^4.1.7",
-    "@types/compression": "0.0.36",
-    "@types/dotenv": "^4.0.3",
-    "@types/express": "^4.16.0",
-    "@types/express-rate-limit": "^2.9.3",
-    "@types/graphql": "^14.0.3",
-    "@types/helmet": "0.0.42",
-    "@types/mocha": "^5.2.5",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^10.12.2",
-    "@types/sinon": "^5.0.5",
+    "@types/dotenv": "^6.1.1",
+    "@types/graphql": "^14.2.0",
+    "@types/helmet": "0.0.43",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.4",
+    "@types/sinon": "^7.0.12",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "chai": "^4.2.0",
-    "chai-http": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cross-env": "^5.2.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.6",
-    "rimraf": "^2.6.2",
-    "sinon": "^7.1.1",
-    "sinon-chai": "^3.2.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-config-security": "^1.12.0",
-    "typescript": "^3.1.6"
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-graphql": "^3.0.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "prettier": "1.17.1",
+    "rimraf": "^2.6.3",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0",
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.1"
   },
   "dependencies": {
-    "apollo-server-express": "^2.1.0",
-    "app-root-path": "^2.1.0",
-    "argon2": "^0.19.3",
-    "compress": "^0.99.0",
-    "compression": "^1.7.3",
-    "cors": "^2.8.5",
+    "apollo-server-fastify": "^2.6.1",
+    "app-root-path": "^2.2.1",
+    "argon2": "^0.23.0",
     "dataloader": "^1.4.0",
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4",
-    "express-rate-limit": "^3.3.0",
-    "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.3",
-    "helmet": "^3.14.0",
-    "lodash": "^4.17.11",
-    "morgan": "^1.9.1",
-    "pg": "^7.6.0",
-    "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.2.8",
-    "winston": "^3.1.0"
+    "dotenv": "^8.0.0",
+    "fastify": "^2.4.1",
+    "fastify-cors": "^2.1.3",
+    "fastify-helmet": "^3.0.0",
+    "fastify-rate-limit": "^2.1.1",
+    "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.4",
+    "pg": "^7.11.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.17"
   }
 }
