--- a/package.json
+++ b/package.json
@@ -12,45 +12,45 @@
   },
   "devDependencies": {
     "@types/app-root-path": "^1.2.4",
-    "@types/chai": "^4.1.7",
-    "@types/dotenv": "^6.1.1",
-    "@types/graphql": "^14.2.3",
-    "@types/helmet": "0.0.43",
+    "@types/chai": "^4.2.7",
+    "@types/dotenv": "^8.2.0",
+    "@types/graphql": "^14.5.0",
+    "@types/helmet": "0.0.45",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.6.9",
-    "@types/sinon": "^7.0.13",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@types/node": "^13.1.4",
+    "@types/sinon": "^7.5.1",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-graphql": "^3.0.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
-    "prettier": "1.18.2",
-    "rimraf": "^2.6.3",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.3.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "cross-env": "^6.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-graphql": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.0.0",
+    "nodemon": "^2.0.2",
+    "prettier": "1.19.1",
+    "rimraf": "^3.0.0",
+    "sinon": "^8.0.4",
+    "sinon-chai": "^3.4.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
   },
   "dependencies": {
-    "apollo-server-fastify": "^2.8.1",
-    "app-root-path": "^2.2.1",
-    "argon2": "^0.24.0",
-    "dataloader": "^1.4.0",
-    "dotenv": "^8.0.0",
-    "fastify": "^2.7.1",
-    "fastify-cors": "^2.1.3",
-    "fastify-helmet": "^3.0.1",
-    "fastify-rate-limit": "^2.2.0",
-    "graphql": "^14.4.2",
-    "graphql-tools": "^4.0.5",
-    "pg": "^7.12.0",
+    "app-root-path": "^3.0.0",
+    "argon2": "^0.25.1",
+    "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "fastify": "^2.11.0",
+    "fastify-cors": "^3.0.1",
+    "fastify-gql": "^2.1.0",
+    "fastify-helmet": "^3.0.2",
+    "fastify-rate-limit": "^3.0.1",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6",
+    "pg": "^7.17.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.22"
   }
 }
