--- a/package.json
+++ b/package.json
@@ -3,54 +3,58 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "debug": "cross-env NODE_ENV=development nodemon --exec ts-node --inspect --debug-brk src/index.ts",
-    "test": "cross-env NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --reporter spec",
-    "test:watch": "cross-env NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --reporter spec --watch",
+    "start": "cross-env NODE_ENV=development ts-node-dev --respawn --ignore-watch node_modules --no-notify src/index.ts",
+    "debug": "cross-env NODE_ENV=development node -r ts-node-dev/register --inspect-brk src/index.ts",
+    "test": "cross-env NODE_ENV=test jest --colors",
+    "test:watch": "cross-env NODE_ENV=test jest --colors --watch",
     "build": "rimraf ./dist && tsc -b",
-    "lint": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "lint:style": "prettier --check src/**/*.ts",
+    "lint": "npm run lint:fix && npm run lint:style",
+    "typeorm": "node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
-    "@types/app-root-path": "^1.2.4",
-    "@types/chai": "^4.2.7",
     "@types/dotenv": "^8.2.0",
     "@types/graphql": "^14.5.0",
     "@types/helmet": "0.0.45",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^13.1.4",
-    "@types/sinon": "^7.5.1",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
+    "@types/jest": "^24.9.0",
+    "@types/node": "^13.1.7",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-graphql": "^3.1.1",
+    "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "mocha": "^7.0.0",
-    "nodemon": "^2.0.2",
+    "husky": "^4.0.10",
+    "jest": "^24.9.0",
     "prettier": "1.19.1",
     "rimraf": "^3.0.0",
-    "sinon": "^8.0.4",
-    "sinon-chai": "^3.4.0",
-    "ts-node": "^8.5.4",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "app-root-path": "^3.0.0",
     "argon2": "^0.25.1",
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "fastify": "^2.11.0",
     "fastify-cors": "^3.0.1",
-    "fastify-gql": "^2.1.0",
+    "fastify-gql": "^2.2.0",
     "fastify-helmet": "^3.0.2",
     "fastify-rate-limit": "^3.0.1",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
-    "pg": "^7.17.0",
+    "merge-graphql-schemas": "^1.7.6",
+    "pg": "^7.17.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.22"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": ""
+    }
   }
 }
