--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "outDir": "./dist",
     "rootDir": ".",
     "moduleResolution": "node",
-
     "removeComments": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -21,6 +20,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.spec.ts"],
+  "include": ["./src/**/*.ts", "**/typings.d.ts", "**/*.setup.ts"]
 }
