--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.3.0",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   },
   "dependencies": {
     "argon2": "^0.25.1",
@@ -41,7 +41,7 @@
     "dotenv": "^8.2.0",
     "fastify": "^2.11.0",
     "fastify-cors": "^3.0.1",
-    "fastify-gql": "^2.2.0",
+    "fastify-gql": "^3.0.0",
     "fastify-helmet": "^3.0.2",
     "fastify-rate-limit": "^3.0.1",
     "graphql": "^14.5.8",
@@ -64,8 +64,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "eslint . --ext .ts --fix",
-      "prettier --check src/**/*.ts --write"
+      "eslint --fix"
     ]
   }
 }
