--- a/package.json
+++ b/package.json
@@ -1,71 +1,86 @@
 {
-  "name": "nodejs_graphql_typescript_starter",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "cross-env NODE_ENV=development ts-node-dev --respawn --ignore-watch node_modules --no-notify src/index.ts",
-    "debug": "cross-env NODE_ENV=development node -r ts-node-dev/register --inspect-brk src/index.ts",
-    "test": "cross-env NODE_ENV=test jest --colors",
-    "test:watch": "cross-env NODE_ENV=test jest --colors --watch",
-    "build": "rimraf ./dist && tsc -b",
-    "mikro-orm": "npx mikro-orm"
-  },
-  "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/graphql": "^14.5.0",
-    "@types/helmet": "0.0.45",
-    "@types/jest": "^24.9.0",
-    "@types/node": "^13.1.7",
-    "@types/pg": "^7.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jest": "^23.6.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-security": "^1.4.0",
-    "husky": "^4.0.10",
-    "jest": "^24.9.0",
-    "lint-staged": "^10.0.0-beta.15",
-    "prettier": "1.19.1",
-    "rimraf": "^3.0.0",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.3.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.5"
-  },
-  "dependencies": {
-    "argon2": "^0.25.1",
-    "dataloader": "^2.0.0",
-    "dotenv": "^8.2.0",
-    "fastify": "^2.11.0",
-    "fastify-cors": "^3.0.1",
-    "fastify-gql": "^3.0.0",
-    "fastify-helmet": "^3.0.2",
-    "fastify-rate-limit": "^3.0.1",
-    "graphql": "^14.5.8",
-    "graphql-tools": "^4.0.6",
-    "merge-graphql-schemas": "^1.7.6",
-    "mikro-orm": "^3.0.0",
-    "pg": "^7.17.1"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/config/db.ts",
-      "./dist/config/db.js"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix"
-    ]
-  }
+	"name": "nodejs_graphql_typescript_starter",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "nodemon",
+		"watch": "cross-env NODE_ENV=development ts-node-dev --respawn --no-notify --pretty --ignore-watch node_modules src/",
+		"debug": "cross-env NODE_ENV=development node -r ts-node-dev/register --inspect-brk src/index.ts",
+		"test": "cross-env NODE_ENV=test jest --colors",
+		"test:watch": "cross-env NODE_ENV=test jest --colors --watch",
+		"build": "rimraf ./dist && tsc -b && npm run copy-schemas-to-dist",
+		"copy-schemas-to-dist": "copyfiles --up 1 src/schemas/* dist/src/",
+		"mikro-orm": "npx mikro-orm"
+	},
+	"devDependencies": {
+		"@types/dotenv": "^8.2.0",
+		"@types/graphql": "^14.5.0",
+		"@types/helmet": "0.0.45",
+		"@types/jest": "^24.9.0",
+		"@types/node": "^13.1.7",
+		"@types/pg": "^7.14.1",
+		"@typescript-eslint/eslint-plugin": "^2.16.0",
+		"@typescript-eslint/parser": "^2.16.0",
+		"copyfiles": "^2.2.0",
+		"cross-env": "^6.0.3",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.9.0",
+		"eslint-plugin-import": "^2.20.0",
+		"eslint-plugin-jest": "^23.6.0",
+		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-security": "^1.4.0",
+		"husky": "^4.0.10",
+		"jest": "^24.9.0",
+		"lint-staged": "^10.0.0-beta.15",
+		"nodemon": "^2.0.2",
+		"prettier": "1.19.1",
+		"rimraf": "^3.0.0",
+		"supertest": "^4.0.2",
+		"ts-jest": "^24.3.0",
+		"ts-node-dev": "^1.0.0-pre.44",
+		"typescript": "^3.7.5"
+	},
+	"dependencies": {
+		"argon2": "^0.25.1",
+		"dataloader": "^2.0.0",
+		"dotenv": "^8.2.0",
+		"fastify": "^2.11.0",
+		"fastify-cors": "^3.0.1",
+		"fastify-gql": "^3.0.0",
+		"fastify-helmet": "^3.0.2",
+		"fastify-rate-limit": "^3.0.1",
+		"graphql": "^14.5.8",
+		"graphql-tools": "^4.0.6",
+		"merge-graphql-schemas": "^1.7.6",
+		"mikro-orm": "^3.0.0",
+		"pg": "^7.17.1"
+	},
+	"mikro-orm": {
+		"useTsNode": true,
+		"configPaths": [
+			"./src/config/db.ts",
+			"./dist/config/db.js"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.ts": [
+			"eslint --fix"
+		]
+	},
+	"nodemonConfig": {
+		"verbose": false,
+		"watch": [
+			"src/"
+		],
+		"ignore": [
+			"dist/*"
+		],
+		"ext": "graphql",
+		"exec": "npm run watch"
+	}
 }
