Add config improvements

--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
 		"test:watch": "cross-env NODE_ENV=test jest --colors --watch",
 		"build": "rimraf ./dist && tsc -b && npm run copy-schemas-to-dist",
 		"copy-schemas-to-dist": "copyfiles --up 1 src/schemas/* dist/src/",
-		"mikro-orm": "npx mikro-orm"
+		"migrate": "mikro-orm migration:up",
+		"codegen": "graphql-codegen --config codegen.yml"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^1.11.2",
+		"@graphql-codegen/typescript": "^1.11.2",
+		"@graphql-codegen/typescript-resolvers": "^1.11.2",
 		"@types/dotenv": "^8.2.0",
 		"@types/graphql": "^14.5.0",
 		"@types/helmet": "0.0.45",
-		"@types/jest": "^24.9.0",
-		"@types/node": "^13.1.7",
+		"@types/jest": "^24.9.1",
+		"@types/node": "^13.5.0",
 		"@types/pg": "^7.14.1",
-		"@typescript-eslint/eslint-plugin": "^2.16.0",
-		"@typescript-eslint/parser": "^2.16.0",
+		"@typescript-eslint/eslint-plugin": "^2.17.0",
+		"@typescript-eslint/parser": "^2.17.0",
 		"copyfiles": "^2.2.0",
 		"cross-env": "^6.0.3",
 		"eslint": "^6.8.0",
@@ -29,14 +33,14 @@
 		"eslint-plugin-jest": "^23.6.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-security": "^1.4.0",
-		"husky": "^4.0.10",
-		"jest": "^24.9.0",
-		"lint-staged": "^10.0.0-beta.15",
+		"husky": "^4.2.1",
+		"jest": "^25.1.0",
+		"lint-staged": "^10.0.2",
 		"nodemon": "^2.0.2",
 		"prettier": "1.19.1",
 		"rimraf": "^3.0.0",
 		"supertest": "^4.0.2",
-		"ts-jest": "^24.3.0",
+		"ts-jest": "^25.0.0",
 		"ts-node-dev": "^1.0.0-pre.44",
 		"typescript": "^3.7.5"
 	},
