--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,10 @@
 # Fill up the vars to be used with the application and docker
 # Since Docker only accepts a .env file, you will use for all environemnts and not commit
 
+API_PORT=
 CORS_ORIGIN=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_HOST=
 DATABASE_PORT=
-DATABASE_DB=
+DATABASE_NAME=
